fix: contain native inputs on narrow screens

--- a/src/inputs/index.css
+++ b/src/inputs/index.css
@@ -11,6 +11,8 @@ textarea {
 }
 
 input {
+  max-inline-size: 100%;
+
   &.block {
     display: block;
   }
