--- a/src/inputs/text-input.css
+++ b/src/inputs/text-input.css
@@ -32,7 +32,6 @@ input[type="week"] {
   color: var(--text);
   background-color: var(--background);
   inline-size: 15.5em;
-  max-inline-size: 100%;
 
   &:focus-visible {
     border-color: var(--accent-foreground);
